--- a/QuizSite/.settings/org.eclipse.wst.common.component
+++ b/QuizSite/.settings/org.eclipse.wst.common.component
@@ -1,7 +1,8 @@
-<?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
+<?xml version="1.0" encoding="UTF-8"?>
+<project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="QuizSite">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <property name="context-root" value="QuizSite"/>
         <property name="java-output-path" value="/QuizSite/build/classes"/>
     </wb-module>
