--- a/QuizSite/WebContent/stylesheet.css
+++ b/QuizSite/WebContent/stylesheet.css
@@ -1,7 +1,7 @@
 .navbar {
 	float:right;
-	margin:0;
-	padding:0;
+	margin:0px;
+	padding:0px;
 }
 .inline {
 	display:inline;
@@ -12,12 +12,12 @@
 	color:olivedrab;
 }
 .achievements {
-	margin-left:50;
-	margin-top:-20;
+	margin-left:50px;
+	margin-top:-20px;
 }
 .welcome {
-	font-size:30;
 	font-weight:bold;
+	font-size:xx-large;
 }
 .announce {
 	font-weight:bold;
@@ -35,7 +35,7 @@ table.table2 td, table.table3 td  {
 }
 table.table1 th, table.table2 th, table.table3 th {
 	border-bottom:1px dotted black;
-	min-width:80;
+	min-width:80px;
 }
 .panel1 {
 	width:65%;
