--- a/QuizSite/WebContent/stylesheet.css
+++ b/QuizSite/WebContent/stylesheet.css
@@ -27,7 +27,7 @@ table.table1 td{
 	border-right:1px dotted black;
 	padding:5px;
 }
-table.table2 td, table.table3 td  { 
+table.table2 td, table.table3 td, table.table4 td, table.table5 td  { 
 	border-left:0px dotted black;
 	border-right:0px dotted black;
 	padding:5px;
@@ -37,12 +37,28 @@ table.table1 th, table.table2 th, table.table3 th {
 	border-bottom:1px dotted black;
 	min-width:80px;
 }
+table.table4 th {
+	border-bottom:1px dotted black;
+	width: 300px;
+}
+table.table5 th {
+	width:150px;
+	border-bottom:1px dotted black;
+}
 .panel1 {
 	width:65%;
 	float:left;
 }
 .panel2 {
 	width:35%;
+	float:left;
+}
+.panel3 {
+	width:40%;
+	float:left;
+}
+.panel4 {
+	width:60%;
 	float:left;
 }
 .list1 {
@@ -52,4 +68,7 @@ table.table1 th, table.table2 th, table.table3 th {
 }
 .table3 {
 	margin-left:-5px;
+}
+.quiz-buttons {
+	float:right;
 }
