adds tag functionality

--- a/QuizSite/WebContent/stylesheet.css
+++ b/QuizSite/WebContent/stylesheet.css
@@ -98,3 +98,11 @@ table.table5 th {
 .navbarPanel {
 	background-color:ghostwhite;
 }
+
+.submitLink {
+background-color: transparent;
+text-decoration: underline;
+border: none;
+color: blue;
+cursor: pointer;
+}
